Fixed issue problems on mobile. Added underline.

--- a/public/css/index-responsive.styl
+++ b/public/css/index-responsive.styl
@@ -14,8 +14,6 @@
 			a
 				margin 5px !important
 
-
-
 	/*
 	 * ABOUT PAGE
 	 */
@@ -119,7 +117,7 @@
 		
 	// 	.ch2
 	// 		font-size 1em !important
-
+		
 	.singleIssue .container
 		padding 10px
 
@@ -359,6 +357,9 @@
 		justify-content center
 		align-items center
 		width 100%
+		
+		padding-bottom 5px
+		border-bottom 1px solid lighten(black, 80%)
 		
 		.sideContainer
 			display -webkit-flex
